# App-TobiiStreamEngine

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  TobiiStreamEngine.cfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
cmake/: FindTobii.cmake  FindVendor.cmake
